# ideabot

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: labels.yaml  pre-commit.yaml
src/: __init__.py  bot.py  const.py  db.py  models.py  util.py
src/api/: __init__.py  api.py
src/api/routers/: __init__.py  _base.py  admin.py  ideas.py
src/commands/: __init__.py  delete_idea.py  dump_ideas.py  fetch_ideas.py  forget_idea.py  gh.py  help.py  remember_idea.py  save_idea.py  search_ideas.py  util.py
src/database/: __init__.py  db.py  util.py
src/database/tasks/: __init__.py  ideas.py  users.py
src/github/: __init__.py  auth.py
src/listeners/: __init__.py  components.py  mention.py
