[project]
name = "ideabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "discord-py-interactions>=5.16.0",
    "discord-py-slash-command>=4.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "prek>=0.4.9",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
